--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,22 @@
 h1 {
   text-align: center;
+  font-family: "Georgia", Times, serif;
 }
-
-body {
-  /*background-color: black;
-  color: white;
-  */
-}
-
 
 .tab {
-  border: none;
+  border: black;
   padding: 10px;
   transition: 0.6s;
   width: 100%;
-  background-color: #ddd;
+  background-color: #00eeff;
+}
+
+.tab h2 {
+  color: #eeeeee;
 }
 
 .active, .tab:hover {
-  background-color: #bbb;
+  background-color: #00aaff;
 }
 
 .panel {
@@ -30,9 +28,14 @@ body {
 
 h4 {
   color: grey;
+  font-size: 12px;
 }
 
 h6 {
   text-align: center;
   font-size: 12px;
+}
+
+li {
+  font-family: "Georgia", Times, serif;
 }
